# SpaceBAR

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/windows/: input.rs
www/: index.html
